src/test/ui/span/wf-method-late-bound-regions.stderr
error[E0597]: `pointer` does not live long enough
  --> $DIR/wf-method-late-bound-regions.rs:30:19
   |
30 |         f2.xmute(&pointer)
   |                   ^^^^^^^ borrowed value does not live long enough
31 |     };
   |     - `pointer` dropped here while still borrowed
...
34 | }
   | - borrowed value needs to live until here

error: aborting due to previous error

